# kdev-embedded

./: .arcconfig  .gitignore  .kde-ci.yml  .reviewboardrc  CMakeLists.txt  Messages.sh  README.md  arduinoversion.h.in  arduinowindow.cpp  arduinowindow.h  arduinowindow.ui  arduinowindowmodel.cpp  arduinowindowmodel.h  astyle.sh  board.cpp  board.h  embedded.cpp  embedded.h  firsttimewizard.cpp  firsttimewizard.h  firsttimewizard.h.in  firsttimewizard.ui  kdevembedded.json  kdevembedded.qrc  kdevembedded.rc  kdevpatrick.json  kdevpatrick.qrc  kdevpatrick.rc  patrickplugin.cpp  patrickplugin.h  toolkit.cpp  toolkit.h  toolkit.h.in
arduinoproject/: CMakeLists.txt  README.md  arduino.cmake  arduino.kdevtemplate  arduinoproject.kdevtemplate
arduinoproject/src/: main.cpp
boardsimg/: README.md
doc_templates/: CMakeLists.txt
embeddedproject/: %{APPNAMELC}.h  Makefile  embeddedproject.kdevtemplate  main.cpp  options.kcfg
launcher/: CMakeLists.txt  debug.h  embeddedexecuteplugin.cpp  embeddedexecuteplugin.h  embeddedlauncher.cpp  embeddedlauncher.h  embeddedlauncher.ui  executeplugin.cpp  executeplugin.h  iembeddedexecuteplugin.h  iexecuteplugin.h  iexecuteplugin2.h  kdevembedded-launcher.json  launcherjob.cpp  launcherjob.h  nativeappconfig.cpp  nativeappconfig.h  nativeappconfig.ui  nativeappjob.cpp  nativeappjob.h  projecttargetscombobox.cpp  projecttargetscombobox.h
po/ar/: kdevembedded.po
po/az/: kdevembedded.po
po/ca/: kdevembedded.po
po/ca@valencia/: kdevembedded.po
po/cs/: kdevembedded.po
po/de/: kdevembedded.po
po/en_GB/: kdevembedded.po
po/eo/: kdevembedded.po
po/es/: kdevembedded.po
po/et/: kdevembedded.po
po/fi/: kdevembedded.po
po/fr/: kdevembedded.po
po/ga/: kdevembedded.po
po/gl/: kdevembedded.po
po/he/: kdevembedded.po
po/it/: kdevembedded.po
po/ja/: kdevembedded.po
po/ka/: kdevembedded.po
po/ko/: kdevembedded.po
po/lt/: kdevembedded.po
po/nl/: kdevembedded.po
po/pl/: kdevembedded.po
po/pt/: kdevembedded.po
po/pt_BR/: kdevembedded.po
po/ru/: kdevembedded.po
po/sk/: kdevembedded.po
po/sl/: kdevembedded.po
po/sv/: kdevembedded.po
po/tr/: kdevembedded.po
po/uk/: kdevembedded.po
po/zh_CN/: kdevembedded.po
po/zh_TW/: kdevembedded.po
template/: %{APPNAMELC}.cpp  %{APPNAMELC}.h  .kdevtemplate  CMakeLists.txt  main.cpp
